[project]
name = "tool-rec-sys"
version = "0.1.0"
description = "Production grade recommendation system for tool website"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "implicit>=0.7.0",
    "scipy>=1.10.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0", # 某些MySQL连接需要
    "tqdm>=4.66.0",         # 进度条
    "python-dotenv>=1.0.0", # 环境变量管理
    "redis>=5.0.0"          # Redis 客户端
]